# geo_and_coords_conv_api_functions

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: api_functions.h  api_structs.h  api_utils.h  coords_conv_functions.h  cov_spy.h  geometric_functions.h  no_heap.h  test_utils.h
pyScripts/: coords_conv_compare_random_with_DLL.py  coords_conv_compare_with_DLL.py  geo_utils.py  visualize_coords_unit_tests.py  visualize_geo_unit_tests.py  visualize_unit_tests.py  viz_line_intersect.py  viz_point_inside.py
src/: CMakeLists.txt  api_functions.cpp  coords_conv_functions.cpp  functions.cpp  geometric_functions.cpp  no_heap.cpp
tests/: CMakeLists.txt  coords_conv_test.cpp  geometric_test.cpp
